--- a/bds516.hw9.md
+++ b/bds516.hw9.md
@@ -1,4 +1,6 @@
-Homework 9 - Blue Whales (Ben Brikman, Arvind Bala, Minglu Xu, Jimena Velazquez, Eva Zhang)
+Homework 9
+
+Thank you to everyone in the Blue Whales for contributing to this project! (Ben Brikman, Arvind Bala, Minglu Xu, Jimena Velazquez, Eva Zhang)
 
 
 Introduction:
@@ -25,10 +27,10 @@ import pandas as pd
 import pprint
 import json
 
-api_key = 'A62hpXTMmvwnfHQJ5p1FZHhFl'
-api_secret = 'JPEHYgLb8q8UG3sCDXcvtd4zhA1hZYTbX2Loi0I0r2EpzkKSFa'
-access_token = '1376528038209327104-gnpfeodzdCyf6CZCyq4eHbvIMfXgcW'
-access_token_secret = 'zHAnAcYTE6gjaLkWnCXvM0UhGuV8ExQFZGfq4nHO3CtGc'
+api_key = ''
+api_secret = ''
+access_token = ''
+access_token_secret = ''
 auth = tweepy.OAuthHandler(api_key, api_secret)
 auth.set_access_token(access_token, access_token_secret)
 api = tweepy.API(auth)
