--- a/bds516.hw9.md
+++ b/bds516.hw9.md
@@ -1,3 +1,7 @@
+Homework 9
+
+Thank you to everyone in the Blue Whales for contributing to this project! (Ben Brikman, Arvind Bala, Minglu Xu, Jimena Velazquez, Eva Zhang)
+
 Introduction:
 This submission is for my Data Science And Quantitative Modeling course (BDS 585) for the Master of Behavioral and Decision Sciences (MBDS) program at the University of Pennsylvania. Recently, our class has been learning about text analysis and how to apply it to real tweets. In order to practice what we've learned, my group and I attempted to see if we could create an algorithm that could effectively analyze elements of a tweet and indicate whether it is one of the two people of interest. In our case, the two people of interest are two of the professors from the MBDS program, Alex Shpenev (instructor for BDS-585) and Eugen Dimant (instructor for BDS-501).
 
