--- a/bds516.hw9.md
+++ b/bds516.hw9.md
@@ -336,8 +336,10 @@ for tweet in timeline_tweets:
     Prediction for tweet: RT @vulture: Lil Nas X Pentatonixes himself before Pentatonix can Pentatonix him. https://t.co/G0twArKXkW: ['shpenev']
     
 
-# Results: For the TFIDF, Count and the SVC model - the naive bayes calculation was just around 65%, meaning the accuracy of predictions were roughly 65% correct (the breakdown true vs. predicted labels is shown by the confusion matrices). As for the prediction algorithm, it predicted Shpenev for every single entry. It did this for Shpenev tweets, Dimant tweets, and for unrelated public tweets. It seems that this was the case because the models correctly predicted many Shpenev tweets (84/85 or 98.8 for the all three models) but correctly predicted much less for Dimant tweets (33/94 or 35.1% for the all three models).
+# Results: 
+For the TFIDF, Count and the SVC model - the naive bayes calculation was just around 65%, meaning the accuracy of predictions were roughly 65% correct (the breakdown true vs. predicted labels is shown by the confusion matrices). As for the prediction algorithm, it predicted Shpenev for every single entry. It did this for Shpenev tweets, Dimant tweets, and for unrelated public tweets. It seems that this was the case because the models correctly predicted many Shpenev tweets (84/85 or 98.8 for the all three models) but correctly predicted much less for Dimant tweets (33/94 or 35.1% for the all three models).
 
-# Conclusion: Although our algorithm runs, it seems that our algorithm primarily predicts Shpenev, even when the tweets are from Dimant. For this reason, I consider this algorithm ineffective and in need of further work. Also, one possible issue is the small sample of tweets. If I repeated this algorithm with different people it is possible that I'd get different results.
+# Conclusion: 
+Although our algorithm runs, it seems that our algorithm primarily predicts Shpenev, even when the tweets are from Dimant. For this reason, I consider this algorithm ineffective and in need of further work. Also, one possible issue is the small sample of tweets. If I repeated this algorithm with different people it is possible that I'd get different results.
 
 
