--- a/bds516.hw9.md
+++ b/bds516.hw9.md
@@ -190,7 +190,7 @@ plot_confusion_matrix(tfidf_nb_cm, classes=['eugen_dimant', 'shpenev'], title="T
 
 
 ```python
-plot_confusion_matrix(count_nb_cm, classes=['eugen_dimant', 'shpenev'], title="TF-IDF NB Confusion Matrix")
+plot_confusion_matrix(count_nb_cm, classes=['eugen_dimant', 'shpenev'], title="Count NB Confusion Matrix")
 ```
 
     Confusion matrix, without normalization
